bugfix/styles-gap-not-work-correct-phone

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,26 +1,3 @@
-body,
-html,
-#root {
-  min-height: 100vh;
-  width: 100%;
-}
-
-#root {
-  display: grid;
-}
-
-*,
-*::before,
-*::after {
-  color: inherit;
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-  box-sizing: border-box;
-  min-width: 0;
-  min-height: 0;
-}
-
 html,
 body,
 div,
